# bang-os

./: .gitignore  Cargo.toml
.cargo/: config
boot/: Cargo.toml
src/: logger.rs  main.rs
