[package]
name = "bang-os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.10.8" }
volatile = "0.4.4"
x86_64 = "0.14.2"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
spinning_top = "0.2.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false


[package.metadata.bootimage]
build-command = ["xbuild"]


[package.metadata.bootloader]
#framebuffer-address = 0xB8000

[workspace]
members = [
    "boot",
]
